--- a/style.css
+++ b/style.css
@@ -13,6 +13,8 @@ body {
 }
 
 button{
+    background-color: white;
+    color: black;
     font-size: 24px;
 }
 
@@ -22,15 +24,16 @@ button{
 
 .info{
     background-color: brown;
-    font-size: 20px;
+    font-size: 30px;
     text-align: left;
 }
 
-.answerButton{
+.answerButton {
     background-color: darkslategray;
-    color: navajowhite;
-    font-size: 24px;
+    color: papayawhip;
+    font-size: 32px;
     width: 40%;
     margin-right: 4px;
     min-height: 64px;
+    max-width: 180px;
 }
