--- a/style.css
+++ b/style.css
@@ -16,6 +16,8 @@ button{
     background-color: white;
     color: black;
     font-size: 24px;
+    margin-bottom: 8px;
+    margin-right: 8px;
 }
 
 .currentQuote {
